# AoC

./: CMakeLists.txt
01/: 01a.cpp  CMakeLists.txt  a.cpp  a.md  b.cpp  b.md  description.md
02/: a.cpp  a.md  b.cpp
03/: a.cpp  b.cpp  b.md
04/: a.cpp  b.cpp  b.md
05/: a.cpp  b.cpp  b.md
06/: a.cpp  b.cpp  b.md
