cmake_minimum_required(VERSION 3.25 FATAL_ERROR)
project(advent2024 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
#set(BUILD_SHARED_LIBS OFF)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
set(CMAKE_BUILD_TYPE Release)

add_executable(01a 01/a.cpp)
add_executable(01b 01/b.cpp)
#add_executable(02a 02/a.cpp)
#add_executable(02b 02/b.cpp)
#add_executable(03a 03/a.cpp)
#add_executable(03b 03/b.cpp)